feat: implement trip discussions (#26)
